@@ -7,9 +7,11 @@ prefs[:deployment] = multiple_choice "Prepare for deployment?", [["no", "none"],
 
 if prefer :deployment, 'heroku'
   say_wizard "installing gems for Heroku"
-  gsub_file 'Gemfile', /.*gem 'sqlite3'\n/, '' if prefer :database, 'sqlite'
-  add_gem 'sqlite3', group: [:development, :test] if prefer :database, 'sqlite'
-  add_gem 'pg', group: :production
+  if prefer :database, 'sqlite'
+    gsub_file 'Gemfile', /.*gem 'sqlite3'\n/, ''
+    add_gem 'sqlite3', group: [:development, :test]
+    add_gem 'pg', group: :production
+  end
   add_gem 'rails_12factor', group: :production
   stage_three do
     say_wizard "recipe stage three"
